<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LifeTime RoadTax Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="vehicleType">Vehicle Type: </string>
    <string name="invoiceDate">Invoice Date: </string>
    <string name="invoiceAmount">Invoice Amount: </string>
    <string name="vehicleStatus">Select Vehicle status: </string>
    <string name="submit">CALCULATE</string>
    <string name="payableRoadTax">Road tax to be paid</string>
    <string name="errorLbl">ERROR!!</string>
    <string name="invoiceAmtHint"> Purchase Amount</string>
    <string name="invoiceDateHint"> Date of purchase</string>
    <string name="title_activity_info">About</string>

</resources>
