<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/MainActivity"
    style="@android:style/TextAppearance.DeviceDefault.Medium"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vehicleStatusText"
            android:text="@string/vehicleStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/vehicleStatusId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/vehicleStatusText"
            android:layout_toRightOf="@id/vehicleStatusText"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vehicleType"
            android:text="@string/vehicleType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/vehicleTypeId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/vehicleType"
            android:layout_toRightOf="@id/vehicleType"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/invoiceDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/invoiceDateId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="date"
            android:hint="@string/invoiceDateHint"></EditText>

    </LinearLayout>


    <!--<DatePicker-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:scaleX="0.5"-->
        <!--android:scaleY="0.5"-->
        <!--android:padding="-40dp"-->
        <!--android:calendarViewShown="false"-->
        <!--android:id="@+id/datePicker" />-->

    <LinearLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/invoiceAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/invoiceAmountId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/invoiceAmtHint"></EditText>

    </LinearLayout>

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/submitBtn"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:outlineProvider="background"
        android:background="@drawable/button_green"/>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/roadTaxPayableText"
        android:text="@string/payableRoadTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/roadTaxPayableAmt"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/errorDisplayLbl"
        android:text="@string/errorLbl"
        android:textColor="#ff0000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/errorMessage"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
